# octopinion-lexical

./: .gitignore  README.md  encodings_to_latex.py  json_to_latex.py  pyproject.toml  spec.md
examples/: concepts.txt
scripts/: export_dot_product.py
src/octopinion/: __init__.py  cache.py  cli.py  codebook.py  config.py  decoder.py  embedder.py  encoder.py  learner.py  system.py
tests/: test_system.py
